--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Androidobligkaraktergivende</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="app_name">Fun With Maps</string>
+    <string name="map_label">Map</string>
+    <string name="setting_label">Settings</string>
+    <string name="people_label">People</string>
+    
+    <string name="pref_trace_label">Tracking</string>
+    <string name="pref_interval_label">Interval</string>
+    <string name="pref_username_label">Username</string>
+    
+    <string name="pref_clear_data_cat_label">Clear data</string>
+    <string name="pref_clear_all_data_label">Clear all</string>
+    <string name="pref_clear_own_data_label">Clear own</string>
+    
+    <string name="pref_clear_remote_data_label">Clear remote</string>
 
+    <string name="default_text">Default</string>
+    <string name="pref_trace_summary">Turn tracking on and off</string>
+    <string name="pref_interval_summary">Change interval for sending position</string>
+    <string name="pref_username_summary">Change username</string>
+    
+    <string name="pref_clear_data_cat_summary">Clear position data</string>
+    <string name="pref_clear_all_data_summary">Clear all position data</string>
+    <string name="pref_clear_own_data_summary">Clear own position data</string>
+    
+    <string name="pref_clear_remote_data_summary">Clear remote position data</string>
+	
+    <string name="username_hint_label">Username</string>
+    <string name="register_button_label">Register</string>
+    
 </resources>
