--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Fun With Maps</string>
+    <string name="app_name">aMap</string>
     <string name="map_label">Map</string>
     <string name="setting_label">Settings</string>
     <string name="people_label">People</string>
@@ -10,22 +10,14 @@
     <string name="pref_interval_label">Interval</string>
     <string name="pref_username_label">Username</string>
     
-    <string name="pref_clear_data_cat_label">Clear data</string>
-    <string name="pref_clear_all_data_label">Clear all</string>
-    <string name="pref_clear_own_data_label">Clear own</string>
+    <string name="pref_clear_data_cat_label">Clear position data</string>
+    <string name="pref_clear_all_data_label">Clear all position data</string>
+    <string name="pref_clear_own_data_label">Clear own position data</string>
     
-    <string name="pref_clear_remote_data_label">Clear remote</string>
+    <string name="pref_clear_remote_data_label">Clear remote position data</string>
 
     <string name="default_text">Default</string>
-    <string name="pref_trace_summary">Turn tracking on and off</string>
-    <string name="pref_interval_summary">Change interval for sending position</string>
-    <string name="pref_username_summary">Change username</string>
-    
-    <string name="pref_clear_data_cat_summary">Clear position data</string>
-    <string name="pref_clear_all_data_summary">Clear all position data</string>
-    <string name="pref_clear_own_data_summary">Clear own position data</string>
-    
-    <string name="pref_clear_remote_data_summary">Clear remote position data</string>
+
 	
     <string name="username_hint_label">Username</string>
     <string name="register_button_label">Register</string>
@@ -43,5 +35,28 @@
     <string name="network_error">No network connection..</string>
     <string name="empty_username_error">Username can not be empty!</string>
     
+    <string name="pref_settings_cat_label">General settings</string>
+    <string name="pref_unregister_label">Unregister from server</string>
+    <string name="pref_customize_cat_label">Customize account</string>
+    <string name="pref_color_label">Choose your color</string>
+    <string name="pref_color_default">-16776961</string>
+    <string name="pref_random_color_label">Randomize position colors</string>
+        <string name="pref_map_label">Choose a map type</string>
+    <string name="pref_map_default">1</string>
+    <string name="log_label">Log</string>
     
+    <string name="clear_all_label">Clearing all position data..</string>
+    <string name="clear_own_label">Clearing own position data..</string>
+    <string name="clear_remote_data">Clearing remote position data..</string>
+    <string name="date">Date</string>
+    <string name="lat">Latitude</string>
+    <string name="lng">Longitude</string>
+    <string name="name">Name</string>
+    
+    <string name="new_pos">Position updated</string>
+    <string name="randomize_color">Randomizing colors..</string>
+    <string name="start_tracking">Tracking started..</string>
+    <string name="stop_tracking">Tracking stopped..</string>
+    <string name="unregister_application">You have been unregistered from server!</string>
+    <string name="kicked_out">Server has kicked you out!</string>
 </resources>
